--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "aws-sdk": "^2.1194.0",
     "axios": "^0.27.2",
+    "http-proxy-middleware": "^2.0.6",
     "i": "^0.3.7",
     "json-server": "^0.17.0",
+    "moment": "^2.29.4",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-h5-audio-player": "^3.8.4",
