--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-h5-audio-player": "^3.8.4",
+    "react-jwt": "^1.1.6",
     "react-magic-slider-dots": "^1.2.2",
     "react-paginate": "^8.1.3",
     "react-redux": "^8.0.2",
